--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
         with:
-          submodules: recursive  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          fetch-depth: 0
+          submodules: recursive
           token: ${{ secrets.PERSONAL_TOKEN }}
 
       - name: Setup Hugo
